[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/DelaGothicOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/icon.png" type="Texture" id=2]
[ext_resource path="res://Main/item_for_sale.gd" type="Script" id=3]
[ext_resource path="res://Assets/SoundFX/handleCoins.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/SoundFX/beltHandle2.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Items_for_sale" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -680.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Owned" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 196.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1

[node name="Item_name" type="Label" parent="HBoxContainer"]
margin_left = 206.0
margin_top = 5.0
margin_right = 403.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Milk"
align = 1

[node name="Sprite" type="Sprite" parent="HBoxContainer/Item_name"]
visible = false
position = Vector2( 162, -13 )
texture = ExtResource( 2 )

[node name="Price" type="Label" parent="HBoxContainer"]
margin_left = 413.0
margin_top = 5.0
margin_right = 610.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1

[node name="Buy" type="Button" parent="HBoxContainer"]
margin_left = 620.0
margin_right = 817.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Buy"

[node name="Sell" type="Button" parent="HBoxContainer"]
margin_left = 827.0
margin_right = 1024.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Sell"

[node name="Buy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Sell" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
[connection signal="pressed" from="HBoxContainer/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="HBoxContainer/Sell" to="." method="_on_Sell_pressed"]
